--- a/project-html-css/Style.css
+++ b/project-html-css/Style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     color: #4E4039;
+    box-sizing: border-box;
 
 }
 body{
     display: grid;
     grid-template-columns: auto auto auto auto auto auto auto auto;
-    box-sizing: border-box;
     width: 100%;
     
 
@@ -22,13 +22,17 @@ body{
     margin-top: 0px;
     justify-content: space-between;
     background-color: #FFFFFF;
-    z-index: 100;
+    z-index: 999;
    
 }
 
-h1{
-    margin-left: 20px;
+
+.logo{
    
+  margin-top: 50px;
+    margin-left: 20px;
+   font-size: 25px;
+   font-weight: bold;
 }
 
 .nav{
@@ -37,8 +41,10 @@ h1{
     gap: 50px;
     margin-top: 20px;
     margin-right: 20px;
+    
    
 }
+
 
 li a{
     text-decoration: none;
@@ -55,6 +61,25 @@ li a{
 }
 span{
     color: #EB5D1E;
+}
+.checkbtn img{
+    width: 60px;
+height: 60px;
+}
+.checkbtn{
+
+
+float: right;
+margin-right: 150px;
+margin-top: 50px;
+cursor: pointer;
+display: none;
+}
+
+
+
+#check{
+    display: none;
 }
 #home{
 text-decoration: none;
@@ -194,6 +219,7 @@ img{
     height: 450px;
     margin-left: 50px;
     text-align: start;
+    z-index: 1;
    
 }
 
@@ -251,6 +277,7 @@ img{
     height: 450px;
     margin-left: 50px;
     text-align: start;
+   z-index: 1;
 }
 .tech p{
    
@@ -462,6 +489,9 @@ input{
     gap: 5px;
     
 } 
+#burger-menu{
+    display: block;
+}
 li a{
     text-decoration: none;
     color: #4E4039;
@@ -587,14 +617,62 @@ padding: 10px 20px;
 }
 
 @media screen and (max-width:426px){
-   
-     .header h1{
+  .header{
+    height: 8%;
+    position: relative;
+    margin-top: 10px;
+  }
+   .nav{
+    display:block;  
+}
+ .logo{
+    grid-column: 1/3;
     text-align: start;
-     grid-column: 1/3;
-     margin-top: 20px;
-     font-size: 35px;
+     padding-top: 5px;
+     font-size: 40px;
+     
     }
     
+    .checkbtn{
+        display: block;
+        position: fixed;
+        right: 0;
+        top:15px;
+        
+    }
+    ul{
+        
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 200px;
+        left: -100%;
+        background-color: #FEF8F5;
+        text-align: center;
+        line-height: 100px;
+        transition: all .5s;   
+    }
+    
+    #check:checked ~ ul{
+        left: 0;
+    }
+    li a{
+        text-decoration: none;
+        color:#4E4039;
+        font-weight: bolder;
+        border: #4E4039  ;
+        padding: 10px 20px 10px 20px;
+        border-radius: 5px;
+        transition: 0.4s;
+        font-size: 40px;
+    }
+    .sub-nav a:hover{
+        padding: 10px 20px 10px 20px;
+        background-color: #EB5D1E;
+    }
+    span{
+        color: #EB5D1E;
+    }
    
     .info-personal{
         grid-column: 1/9;
