--- a/project-html-css/Style.css
+++ b/project-html-css/Style.css
@@ -29,7 +29,7 @@ body{
 
 .logo{
    
-  margin-top: 50px;
+  margin-top: 20px;
     margin-left: 20px;
    font-size: 25px;
    font-weight: bold;
@@ -67,8 +67,6 @@ span{
 height: 60px;
 }
 .checkbtn{
-
-
 float: right;
 margin-right: 150px;
 margin-top: 50px;
@@ -479,27 +477,16 @@ input{
 
 @media screen and (min-width:426px) and (max-width:768px) {
     
-.header h1{
-    padding-top:20px ;
-    
-}
+
 
 .nav {
     font-size: 13px;
     gap: 5px;
     
 } 
-#burger-menu{
-    display: block;
-}
-li a{
-    text-decoration: none;
-    color: #4E4039;
-    font-weight: bolder;
-    border: #4E4039  ;
-    padding: 5px 10px 5px 10px;
-    border-radius: 5px;
-    transition: 0.4s;
+
+a{
+    font-size: 20px;
 }
 
 .info-personal{
@@ -529,9 +516,7 @@ padding: 10px 20px;
     font-size: 15px;
     
     }
-    .Education{
     
-    }
     
     .eduimg img{
        width:200px;
@@ -624,6 +609,12 @@ padding: 10px 20px;
   }
    .nav{
     display:block;  
+}
+.sub-nav a:hover{
+    
+}
+.sub-nav:hover{
+    background: #EB5D1E;
 }
  .logo{
     grid-column: 1/3;
@@ -877,7 +868,7 @@ padding: 10px 20px;
  }
  .right-footer{
     
-    margin-left: 30px;
+    
     grid-column: 1/4;
     
  }
@@ -894,6 +885,7 @@ padding: 10px 20px;
 .btn-footer{
      width:600px;
      font-size: 30px;
+     
 }
    
 
