Co-authored-by: ahmadkhatatbe <ahmedkatatbeh123@gmail.com> Co-authored-by: Ahmed Al-khatatbeh <127099389+ahmadkhatatbe@users.noreply.github.com>

--- a/project-html-css/Style.css
+++ b/project-html-css/Style.css
@@ -631,7 +631,7 @@ padding: 10px 20px;
         top:15px;
         
     }
-    ul{
+    .nav{
         
         position: fixed;
         width: 100%;
